agregando link a cotizador

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       </li>
                       <li class="rd-nav-item"><a class="rd-nav-link" href="Notebooks.html">Notebooks</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="https://cryptic-island-81571.herokuapp.com/">Presupuesta tu servicio</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="https://cotizador-tunotebooklp.vercel.app/">Presupuesta tu servicio</a>
                       </li>
                     </ul>
                   </div>
